tests/NormalTests/paczka1/fuzzy1/99353740.err
Error in line 7: 14XconqM A535 19,4
Error in line 9: A535 A535 -1,3
Error in line 32: 14XconqM A626 90,5
Error in line 18: A535 S345 94,6
Error in line 38: MbjQbgG S345 168,3
